@@ -1,12 +1,11 @@
 package dev.rosewood.rosetimber;
 
 import dev.rosewood.rosegarden.RosePlugin;
-import dev.rosewood.rosegarden.database.DataMigration;
 import dev.rosewood.rosegarden.manager.Manager;
 import dev.rosewood.rosegarden.utils.NMSUtil;
-import dev.rosewood.rosetimber.command.CommandHandler;
 import dev.rosewood.rosetimber.listener.TreeFallListener;
 import dev.rosewood.rosetimber.manager.ChoppingManager;
+import dev.rosewood.rosetimber.manager.CommandManager;
 import dev.rosewood.rosetimber.manager.ConfigurationManager;
 import dev.rosewood.rosetimber.manager.HookManager;
 import dev.rosewood.rosetimber.manager.LocaleManager;
@@ -15,12 +14,10 @@ import dev.rosewood.rosetimber.manager.SaplingManager;
 import dev.rosewood.rosetimber.manager.TreeAnimationManager;
 import dev.rosewood.rosetimber.manager.TreeDefinitionManager;
 import dev.rosewood.rosetimber.manager.TreeDetectionManager;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
 import org.bukkit.Bukkit;
-import org.bukkit.command.PluginCommand;
 import org.bukkit.plugin.PluginManager;
+
+import java.util.List;
 
 /**
  * @author Esophose
@@ -37,22 +34,20 @@ public class RoseTimber extends RosePlugin {
     }
 
     public RoseTimber() {
-        super(-1, 7599, ConfigurationManager.class, null, LocaleManager.class);
+        super(-1, 7599, ConfigurationManager.class, null, LocaleManager.class, CommandManager.class);
 
         instance = this;
     }
 
     @Override
     public void enable() {
-        if (NMSUtil.getVersionNumber() < 13) {
-            this.getLogger().severe("RoseTimber only supports 1.13.2 and above. The plugin has been disabled.");
+        if (NMSUtil.getVersionNumber() < 16) {
+            this.getLogger().severe("RoseTimber only supports 1.16.5 or higher, The plugin has been disabled");
             Bukkit.getPluginManager().disablePlugin(this);
+            return;
         }
 
-        PluginCommand command = this.getCommand("rosetimber");
-        if (command != null)
-            command.setExecutor(new CommandHandler(this));
-
+        // Regiser Listeners
         PluginManager pluginManager = Bukkit.getPluginManager();
         pluginManager.registerEvents(new TreeFallListener(this), this);
     }
@@ -64,7 +59,7 @@ public class RoseTimber extends RosePlugin {
 
     @Override
     protected List<Class<? extends Manager>> getManagerLoadPriority() {
-        return Arrays.asList(
+        return List.of(
                 TreeDefinitionManager.class,
                 TreeDetectionManager.class,
                 SaplingManager.class,
@@ -73,11 +68,6 @@ public class RoseTimber extends RosePlugin {
                 HookManager.class,
                 ChoppingManager.class
         );
-    }
-
-    @Override
-    public List<Class<? extends DataMigration>> getDataMigrations() {
-        return Collections.emptyList();
     }
 
 }
